@@ -4,8 +4,8 @@
     <Author value="MPLogue,Pille,Stallionsden,ZZTong" />
     <Description value="Adds custom block definitions and supporting configurations. (Version A21.0.001)" />
     <DisplayName value="Custom-Blocks-Pack" />
-    <Version value="21.0.001.0012" />  <!-- [TFP-Major.TFP-Minor.CBP-Version.CBP-Build] -->
-    <!-- Build Date: 7/09/2023 -->
+    <Version value="21.0.001.0013" />  <!-- [TFP-Major.TFP-Minor.CBP-Version.CBP-Build] -->
+    <!-- Build Date: 7/12/2023 -->
     <Website value="" />
     <!-- Dependencies: None -->
 </xml>
