@@ -1,5 +1,8 @@
 CHANGE LOG / RELEASE NOTES: (Newest to Oldest)
 
+A21.0.001.0013 : 
+* Added more deco weapons, offset sniper rifle and offset drone beam.
+
 A21.0.001.0012 : 
 * Icons added to MPL's deco weapons.
 
